# devops

./: .clang-format  .editorconfig  .gitignore  CLAUDE.md  CODEOWNERS  README.md  TEST_ENV.md  TEST_REPORT.md  bugs.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci-cd.yaml  ci.yml  e2e-tests.yml  release.yml  test.yml
agent/: CMakeLists.txt  conanfile.txt
agent/config/: agent.yaml
agent/include/agent/: command.hpp  command_queue.hpp  config.hpp  heartbeat_worker.hpp  ipc.hpp  logger.hpp  process_manager.hpp  thread_pool.hpp  websocket_client.hpp
agent/include/agent/common/: types.hpp
agent/src/common/: CMakeLists.txt  ipc.cpp  types.cpp  websocket_client.cpp
agent/src/heartbeat/: CMakeLists.txt  heartbeat.cpp  main.cpp  metrics.cpp
agent/src/main/: CMakeLists.txt  config.cpp  logger.cpp  main.cpp  process_manager.cpp  service.cpp  updater.cpp
agent/src/task/: CMakeLists.txt  command_executor.cpp  command_queue.cpp  main.cpp  thread_pool.cpp  websocket_client.cpp
agent/src/task/commands/: clean_disk.cpp  exec_shell.cpp  init_machine.cpp
agent/test/: CMakeLists.txt  connection_test.cpp  task_test.cpp
agent/tests/: CMakeLists.txt  connection_test.cpp  heartbeat_test.cpp  task_test.cpp
deployments/docker/: Dockerfile  docker-compose.prod.yaml  docker-compose.yaml
deployments/kubernetes/: config-secrets.yaml  server-deployment.yaml  server-service.yaml
deployments/windows/: agent.wxs
docs/: agent-installation.md  coding-standards.md  configuration-reference.md  design.md  git-conventions.md  server-deployment.md
openspec/changes/add-monitor-dashboard/: design.md  tasks.md
openspec/changes/agent-detail-chat-interface/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-add-monitor-dashboard/: proposal.md  tasks.md
openspec/changes/archive/2026-03-02-implement-agent-teams/: design.md  tasks.md
openspec/changes/archive/2026-03-04-e2e-test-infrastructure/: design.md  proposal.md  tasks.md
openspec/changes/implement-agent-teams/: proposal.md
openspec/specs/agent-heartbeat/: spec.md
openspec/specs/agent-management/: spec.md
openspec/specs/alert-history/: spec.md
openspec/specs/dashboard-frontend/: spec.md
openspec/specs/e2e-test-agent-metrics/: spec.md
openspec/specs/e2e-test-infrastructure/: spec.md
openspec/specs/e2e-test-task-execution/: spec.md
openspec/specs/e2e-test-task-queue/: spec.md
openspec/specs/e2e-test-user-auth/: spec.md
openspec/specs/metrics-chart/: spec.md
openspec/specs/monitoring-dashboard/: spec.md
openspec/specs/quick-task-exec/: spec.md
openspec/specs/realtime-push/: spec.md
openspec/specs/task-execution/: spec.md
openspec/specs/user-auth/: spec.md
server/: .air.toml  .dockerignore  .golangci.yml  Dockerfile  Dockerfile.dev  go.mod  go.sum  start-server.sh  stop-server.sh
server/api/: openapi.yaml
server/cmd/server/: main.go
server/configs/: config.test.yaml  config.yaml
server/internal/infrastructure/migrate/: migrate.go
server/internal/pkg/cache/: cache.go
server/internal/pkg/config/: config.go
server/internal/pkg/database/: database.go
server/internal/pkg/logger/: logger.go
server/internal/pkg/middleware/: auth.go  middleware.go
server/internal/pkg/mq/: mq.go
server/internal/pkg/response/: response.go
server/internal/pkg/storage/: storage.go
server/scripts/: check_metrics.go  create_agent.go  create_alert_tables.go  create_user.go  fix_password.sql  list_agents.go  test_list_sort.go
server/scripts/gen_hash/: main.go
server/scripts/ws_client/: main.go
server/test/: helper.go
server/test/integration/: agent_test.go  auth_test.go  task_test.go  websocket_test.go
server/tests/e2e/: agent_test.go  auth_test.go  client.go  containers.go  factory.go  fixtures.go  helpers.go  monitor_test.go  suite.go  task_test.go  test_config.yaml  update_test.go  websocket_test.go
web/: DEPLOYMENT.md  Dockerfile  build.sh  check-chart.cjs  check-chart.js  eslint.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  preview.sh  start-dev.sh  test-ws.cjs  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/docs/code-review/: agent-terminal.md
web/docs/components/: AgentTerminal.md
web/docs/deployment/: terminal-verification.md
web/docs/release-notes/: agent-terminal.md
web/docs/user-guide/: terminal.md
web/e2e/: playwright.config.ts  playwright.integration.config.ts  tsconfig.json  tsconfig.tsbuildinfo
web/e2e/fixtures/: index.ts
web/e2e/helpers/: auth.helper.ts
web/e2e/mocks/: agents.mock.ts  tasks.mock.ts
web/e2e/pages/: agent-detail.page.ts
web/e2e/tests/agent-detail/: debug-history-metrics.integration.spec.ts  execute-task.integration.spec.ts  execute-task.spec.ts  history-metrics.integration.spec.ts  info-card.integration.spec.ts  info-card.spec.ts  navigation.spec.ts  status-dashboard.integration.spec.ts  status-dashboard.spec.ts
web/src/: App.tsx  index.css
web/src/api/: agents.ts  alerts.ts  auth.ts  client.ts  dashboard.ts  index.ts  tasks.ts
web/src/components/agents/: RecentTasks.tsx
web/src/components/common/: AlertNotificationProvider.tsx  ProtectedRoute.tsx  alertHandler.ts
web/src/components/dashboard/: AgentStatusGrid.module.css  AgentStatusGrid.tsx  RecentAlerts.module.css  RecentAlerts.tsx  StatCards.module.css  StatCards.tsx  TaskTrendChart.tsx
web/src/components/layout/: MainLayout.module.css  MainLayout.tsx
web/src/components/tasks/: ExecuteTaskModal.tsx  ExecutionResultModal.tsx
web/src/components/terminal/: AgentTerminal.module.css  AgentTerminal.tsx  CommandInput.tsx  CommandMessage.tsx  ErrorMessage.tsx  MessageList.tsx  QuickCommands.tsx  ResultMessage.tsx  TerminalHeader.tsx  TerminalHeader.types.ts  index.ts  (+1 more)
web/src/hooks/: useWebSocket.ts
web/src/stores/: auth.ts  dashboard.ts  index.ts  terminal.ts  websocket.ts
web/src/test/: helpers.ts  setup.ts
web/src/types/: index.ts
web/src/utils/: format.ts
web/tests/e2e/: agent.spec.ts  login.spec.ts  task.spec.ts  terminal-responsive.spec.ts  terminal.spec.ts
(+74 files in other folders)
